--- a/src/cssFiles/MainGridLayout.module.css
+++ b/src/cssFiles/MainGridLayout.module.css
@@ -11,10 +11,13 @@ body
 .AppMainGrid{
 
     display: grid;
-    grid-template-rows: 10vh 80vh 10vh;
+    grid-template-rows: 5vh clac(100%-15vh) 10vh;
     grid-template-columns: 5% 90% 5%;
 
+    row-gap: 10px;
+
     margin: 3vh;
+    
 
     
 
@@ -23,4 +26,7 @@ body
 .AppMainArea{
     grid-row:2;
     grid-column: 2;
+    background: red;
+
+   
 }
