--- a/src/cssFiles/menuBar.module.css
+++ b/src/cssFiles/menuBar.module.css
@@ -20,14 +20,12 @@
     background-color: var(--middle-yellow-red);
     grid-template-columns: minmax(10%,15%) minmax(10%,15%) minmax(10%,15%) minmax(10%,15%) minmax(10%,15%) minmax(10%,15%) minmax(10%,15%) ;
 
-    justify-self: stretch;
-    align-self: center;
 
     justify-content: center;
     align-items: center;
    
-    min-height: 4rem;
-    height: 5vh;
+    min-height: 2rem;
+    height: auto;
 
     grid-column: 2;
 
@@ -44,7 +42,9 @@
     text-align: center;
 
     height: 3vh;
-    min-height: 3.5rem;
+    min-height: 80%;
+
+    
 
     border-radius: 50px;
     background-color: var(--burnt-sienna) ;
